--- a/app/src/main/res/layout/activity_game_main_menu.xml
+++ b/app/src/main/res/layout/activity_game_main_menu.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="Monster Phonics"
+        android:text="@string/monster_phonics"
         android:textColor="@color/white"
         android:gravity="center"
         android:textSize="40sp"
@@ -25,25 +25,49 @@
 
     <Button
         android:id="@+id/btnPlayGame"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
         android:layout_centerInParent="true"
-        android:text="Play Game"
-        android:textSize="20sp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/rounded_button_pink"
-        android:onClick="openGameLogic" />
+        android:text="@string/play_game"
+        android:onClick="openGameLogic"
+        />
 
     <Button
         android:id="@+id/btnSettings"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:text="@string/settings"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
         android:layout_below="@id/btnPlayGame"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Settings"
-        android:textSize="20sp"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/rounded_button_blue" />
+        />
+
+    <Button
+        android:id="@+id/btnExit"
+        android:layout_marginTop="170dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:text="@string/exit_game"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_below="@id/btnPlayGame"
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
