--- a/app/src/main/res/layout/activity_game_main_menu.xml
+++ b/app/src/main/res/layout/activity_game_main_menu.xml
@@ -9,8 +9,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/game_wallpaper"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/game_wallpaper" />
 
     <TextView
         android:layout_width="match_parent"
@@ -18,6 +18,7 @@
         android:layout_alignParentTop="true"
         android:text="@string/monster_phonics"
         android:textColor="@color/white"
+        android:fontFamily="@font/poppins_font"
         android:gravity="center"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -27,48 +28,62 @@
         android:id="@+id/btnPlayGame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
-        android:layout_centerInParent="true"
-        android:text="@string/play_game"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/button"
+        android:fontFamily="@font/poppins_font"
         android:onClick="openGameLogic"
-        />
+        android:text="@string/play_game"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btnReadMe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="330dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/button"
+        android:fontFamily="@font/poppins_font"
+        android:text="@string/read_me"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnSound"
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:text="@string/sound"
-        android:onClick="playIt"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
         android:layout_below="@id/btnPlayGame"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/button"
+        android:fontFamily="@font/poppins_font"
+        android:onClick="playIt"
+        android:text="@string/sound"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnExit"
-        android:layout_marginTop="170dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:text="@string/exit_game"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
         android:layout_below="@id/btnPlayGame"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="327dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/button"
+        android:fontFamily="@font/poppins_font"
+        android:text="@string/exit_game"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
